--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body{
+    background: #f9fafd;
+}
+
 h1{
     color: #161C2D;
     font-family: 'Montserrat', sans-serif;
@@ -46,8 +50,8 @@ p{
 .header{
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.5),rgba(255, 255, 255, 0.5)),url(img/background.jpg);
-    background-position: center;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.8),rgba(255, 255, 255, 0.8)),url(img/bg.jpg);
+    background-position: top;
     background-size: cover;
     position: relative;
 }
@@ -109,26 +113,10 @@ nav .fa{
     align-items: center;
 }
 
-.content-pic{
-    margin-left: 11%;
-}
-
-.content-pic img{
-    height: 60%;
-    position: absolute;
-    top: 20%;
-    filter: grayscale(0);
-}
-
-.content-pic img:hover{
-    filter: grayscale(1);
-    transition: 0.5s;
-}
-
 .content{
-    margin-left: 30%;
     text-align: left;
     position: relative;
+    width: 60%;
 }
 
 .content h3{
@@ -209,17 +197,12 @@ nav .fa{
         padding: 10%  ;
     }
     
-    .content-pic img{
-        height: 50%;
-        position: absolute;
-        top: 9%;
-    }
-
     .content{
         margin: auto;
         text-align: left;
+        align-items: center;
         position: relative;
-        margin-top: 390px;
+        width: 100%;
     }
     
     .content h3{
@@ -567,7 +550,7 @@ nav .fa{
 
 .contact-col div{
     display: flex;
-    align-item: center;
+    align-items: center;
     margin-bottom: 40px;
 }
 
